2008-06-17  Sancho Lerena <slerena@artica.es>

	* config.pm: Added options for xprobe2, and autocreate.

	* tools.pm: Added functions pandora_create_agent(), pandora_get_os(),
	and pandora_event() (this has been moved from DB.pm).

	* pandora_server.conf: Added options for xprobe2, autocreate and
	autocreate_group.

	* pandora_network: Added support for TCP scanning (not implemented in
	console yet), parent detection using traceroute, OS fingerprinting with
	xprobe2, event creation using central functions, and some optimizations.

	* pandora_server: Added support for agent autocreation, OS detection from
	the XML header, and event notification "new_agent" type.

	* pandora_recon: First code to implement traceroute functionality
	using Pureperl module.  Added code for remote OS fingerprinting.


2008-06-16  Sancho Lerena <slerena@artica.es>

	* pandora_snmpconsole: Solved a few bugs detected by Manu.

2008-06-13  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf: Added new internal MTA feature config tokens .
    
    * pandora_server_installer: Copy default plugins to /usr/share/pandora/util
    
    * Config.pm: New MTA feature tokens, and added event when starting server.
    
    * DB.pm: Changes in execute_alert function (now passes several hash refs).
    Alerts and events now use new format of events. Add support for new inter-
    nal MTA/SMTP alert feature. Discovered and FIXED a very annoying bug on
    need_update usage in write_state function that was making a HUGE 
    degradation when too many non-init modules in network server.
        
    * Tools.pm: Added pandora_sendmail() function. Needs Mail::Sendmail dep.
    
    * All servers: Support for pandora_shutdown notify on event database.
    
    * pandora_snmpconsole: Updated SNMP alert mechanism. Need to be tested!.
    
    * pandora_recon: Now generate an event when discover a new host.
    
    * util/pandora_db.pl: Added support to automatically delete events.

