@@ -176,3 +176,7 @@ autocreate_group 2
 # set to 0 to disable
 
 autocreate 1
+
+# recon_threads (3 by default)
+
+recon_threads 3
